cmake packaging test

--- a/ThreadPool/CMakeLists.txt
+++ b/ThreadPool/CMakeLists.txt
@@ -12,6 +12,7 @@ target_include_directories(Lumadi_ThreadPool
         $<INSTALL_INTERFACE:include>
 )
 
+
 install(TARGETS Lumadi_ThreadPool
     EXPORT Lumadi_ThreadPoolTargets
     ARCHIVE DESTINATION lib
@@ -19,6 +20,32 @@ install(TARGETS Lumadi_ThreadPool
     RUNTIME DESTINATION bin
 )
 install(DIRECTORY include/Lumadi/ DESTINATION include/Lumadi)
+
+# Export targets and create CMake package config files
+install(EXPORT Lumadi_ThreadPoolTargets
+    FILE Lumadi_ThreadPoolTargets.cmake
+    NAMESPACE Lumadi::
+    DESTINATION lib/cmake/Lumadi_ThreadPool
+)
+
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file(
+    "${CMAKE_CURRENT_BINARY_DIR}/Lumadi_ThreadPoolConfigVersion.cmake"
+    VERSION ${PROJECT_VERSION}
+    COMPATIBILITY AnyNewerVersion
+)
+
+configure_package_config_file(
+    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Lumadi_ThreadPoolConfig.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/Lumadi_ThreadPoolConfig.cmake"
+    INSTALL_DESTINATION lib/cmake/Lumadi_ThreadPool
+)
+
+install(FILES
+    "${CMAKE_CURRENT_BINARY_DIR}/Lumadi_ThreadPoolConfig.cmake"
+    "${CMAKE_CURRENT_BINARY_DIR}/Lumadi_ThreadPoolConfigVersion.cmake"
+    DESTINATION lib/cmake/Lumadi_ThreadPool
+)
 
 enable_testing()
 add_subdirectory(tests)
