--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,3 +48,16 @@ jobs:
           files: artifacts/**/*.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  cleanup:
+    if: failure()
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Delete tag if tests failed
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          TAG_NAME=${GITHUB_REF##*/}
+          echo "Deleting tag $TAG_NAME"
+          gh api --method DELETE /repos/${{ github.repository }}/git/refs/tags/$TAG_NAME
