--- a/cmake/LumadiConfig.cmake.in
+++ b/cmake/LumadiConfig.cmake.in
@@ -1,6 +1,6 @@
 @PACKAGE_INIT@
 include("${CMAKE_CURRENT_LIST_DIR}/../ThreadPool/lib/cmake/ThreadPool/ThreadPoolTargets.cmake")
-# Optional: zentrales ALIAS-Target für das Superpaket
+# Super package ALIAS target for build context (FetchContent, add_subdirectory)
 if(NOT TARGET Lumadi::Lumadi)
 	add_library(Lumadi::Lumadi INTERFACE IMPORTED)
 	target_link_libraries(Lumadi::Lumadi INTERFACE Lumadi::ThreadPool)
